    files into git, the same as is done when importing with content.
    If the largefiles expression needs the file content available
    (due to mimetype or mimeencoding being used), the import will fail.
  * sync: When run without --content, import without copying from
    importtree=yes directory special remotes.
    (Other special remotes may support this later as well.)

 -- Joey Hess <id@joeyh.name>  Mon, 14 Sep 2020 18:34:37 -0400

git-annex (8.20200908) upstream; urgency=medium

  * Added httpalso special remote, which is useful for accessing 
    content stored on other remotes that is published by http.
  * The external special remote protocol got an ASYNC extension.
    This can be used by an external special remote to let a single process
    perform concurrent actions, rather than multiple processes being
    started, when that is more efficient.
  * Retry transfers to exporttree=yes remotes same as for other remotes.
  * import: Retry downloads that fail, same as is done for downloads generally.
  * Limit retrying of failed transfers when forward progress is being made
    to 5, to avoid some unusual edge cases where too much retrying could
    result in far more data transfer than makes sense.
  * Exposed annex.forward-retry git config, to configure the forward retry
    behavior that git-annex has had for a long time.
  * sync, assistant, merge: When merge.directoryRenames is not set,
    default it it to "false", which works better with automatic merge
    conflict resolution than git's ususual default of "conflict".
    (This is not done when automatic merge conflict resolution is disabled.)
  * resolvemerge: Improve cleanup of cruft left in the working tree 
    by a conflicted merge.
  * Support git remotes where .git is a file, not a directory,
    eg when --separate-git-dir was used.
  * Fixed several cases where files were created without file mode bits
    that the umask would usually set. This included exports to the