@@ -30,6 +30,7 @@ git-annex (8.20200909) UNRELEASED; urgency=medium
   * sync: When run without --content, import without copying from
     importtree=yes directory special remotes.
     (Other special remotes may support this later as well.)
+  * addurl: Avoid a redundant git ignores check for speed.
 
  -- Joey Hess <id@joeyh.name>  Mon, 14 Sep 2020 18:34:37 -0400
 
